tests/tooling/fixtures/native/execution/positive/for_no_condition_body_return_accept.objc3
module ForNoConditionBodyReturnAccept;

fn main() -> i32 {
  for (let i = 0; ; i = i + 1) {
    return 42;
  }
}
