tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_statement_pure.objc3
module MisplacedQualifierStatementPure;

fn main() -> i32 {
  pure let value = 1;
  return value;
}